Bug 1174122 - Update the URL bar autocomplete popup's star icon so it is visible within selected items. r=gijs
UltraBlame original commit: 56ae687cc98a52a83ec003411ace217a7b58d81f

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -13809,7 +13809,9 @@ skin
 /
 places
 /
-bookmark
+autocomplete
+-
+star
 .
 png
 "
@@ -13824,10 +13826,10 @@ region
 :
 rect
 (
-0px
-32px
+0
 16px
 16px
+0
 )
 ;
 width
@@ -13839,29 +13841,17 @@ height
 16px
 ;
 }
-richlistitem
-[
-selected
-=
-"
-true
-"
-]
-[
-current
-=
-"
-true
-"
-]
->
+media
+(
+min
+-
+resolution
+:
+1
 .
-ac
--
-title
--
-box
->
+1dppx
+)
+{
 .
 ac
 -
@@ -13883,12 +13873,38 @@ tree
 -
 image
 (
-selected
-current
 bookmark
 treecolAutoCompleteImage
 )
 {
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+autocomplete
+-
+star
+2x
+.
+png
+"
+)
+;
 -
 moz
 -
@@ -13898,12 +13914,13 @@ region
 :
 rect
 (
-0px
-48px
-16px
+0
 32px
+32px
+0
 )
 ;
+}
 }
 .
 ac
@@ -14054,6 +14071,150 @@ default
 theme
 )
 {
+richlistitem
+[
+selected
+=
+"
+true
+"
+]
+[
+current
+=
+"
+true
+"
+]
+>
+.
+ac
+-
+title
+-
+box
+>
+.
+ac
+-
+result
+-
+type
+-
+bookmark
+.
+autocomplete
+-
+treebody
+:
+:
+-
+moz
+-
+tree
+-
+image
+(
+selected
+current
+bookmark
+treecolAutoCompleteImage
+)
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+32px
+16px
+16px
+)
+;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+1dppx
+)
+{
+richlistitem
+[
+selected
+=
+"
+true
+"
+]
+[
+current
+=
+"
+true
+"
+]
+>
+.
+ac
+-
+title
+-
+box
+>
+.
+ac
+-
+result
+-
+type
+-
+bookmark
+.
+autocomplete
+-
+treebody
+:
+:
+-
+moz
+-
+tree
+-
+image
+(
+selected
+current
+bookmark
+treecolAutoCompleteImage
+)
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+64px
+32px
+32px
+)
+;
+}
+}
 .
 ac
 -
@@ -16206,88 +16367,6 @@ rect
 16px
 16px
 0
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-.
-bookmark
--
-item
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-places
-/
-bookmark
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-;
-}
-#
-bookmarks
--
-menu
--
-button
-.
-bookmark
--
-item
-[
-starred
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-32px
-16px
-16px
 )
 ;
 }
